--- a/product_extension/views/product_view.xml
+++ b/product_extension/views/product_view.xml
@@ -15,7 +15,7 @@
                     <field name="cast_color" attrs="{'invisible':[('product_type','!=','cast')]}" placeholder="Buff/White/Gray/others" />
                     <field name="cast_pieces" attrs="{'invisible':[('product_type','!=','cast')]}" placeholder="1-1500" />
                     
-                    <field name="raw_type" attrs="{'invisible':[('product_type','!=','raw')]}" />
+                    <field name="raw_type_id" attrs="{'invisible':[('product_type','!=','raw')]}" />
                     <field name="raw_size" attrs="{'invisible':[('product_type','!=','raw')]}" />
                     <field name="raw_cut" attrs="{'invisible':[('product_type','!=','raw')]}" />
 
@@ -37,5 +37,21 @@
             </group>
         </field>
     </record>
+
+    <record id="action_raw_rock_type" model="ir.actions.act_window">
+        <field name="name">Raw Rock Type</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">raw.rock.type</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_type">form</field>
+        <field name="context"></field>
+        <field name="help" type="html">
+            <p class="oe_view_nocontent_create">
+                Click to define a new rock type.
+            </p>
+        </field>
+    </record>
+    <menuitem id="menu_raw_rock_type_stock" name="Raw Rock Type" action="action_raw_rock_type"
+        parent="stock.menu_stock_inventory_control" sequence="2"/>
 </data>
 </odoo>
